erDiagram
    USERS ||--o{ ADDRESSES : "has"
    USERS ||--o| CARTS : "owns"
    USERS ||--o{ ORDERS : "places"
    
    CARTS ||--o{ CART_ITEMS : "contains"
    PRODUCTS ||--o{ CART_ITEMS : "added to"
    
    ORDERS ||--o{ ORDER_ITEMS : "consists of"
    ORDERS ||--|| PAYMENTS : "paid by"
    ORDERS }o--|| ADDRESSES : "ships to"
    PRODUCTS ||--o{ ORDER_ITEMS : "ordered in"

    USERS {
        bigint id PK
        string name
        string email
        string password_hash
        string phone
        datetime created_at
    }

    CARTS {
        bigint id PK
        bigint user_id FK
        decimal total
        datetime updated_at
    }

    CART_ITEMS {
        bigint id PK
        bigint cart_id FK
        bigint product_id FK
        int quantity
        decimal unit_price
        decimal line_total
    }

    PAYMENTS {
        bigint id PK
        bigint order_id FK
        string provider
        string reference_id
        string status
        datetime paid_at
    }

    CONTACT_MESSAGES {
        bigint id PK
        string name
        string email
        text message
        datetime created_at
        string status
    }

    ADDRESSES {
        bigint id PK
        bigint user_id FK
        string line1
        string city
        string country
        tinyint is_default
    }

    PRODUCTS {
        bigint id PK
        string sku
        string name
        decimal price
        int stock
    }

    ORDERS {
        bigint id PK
        bigint user_id FK
        bigint shipping_address_id FK
        decimal total_amount
        string status
    }

    ORDER_ITEMS {
        bigint id PK
        bigint order_id FK
        bigint product_id FK
        int quantity
        decimal unit_price
        decimal line_total
    }